--- a/apps/source_selector/in_dev_plotly/source_viewer_and_selector.ipynb
+++ b/apps/source_selector/in_dev_plotly/source_viewer_and_selector.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "dmd = 1\n",
-    "fp = spy.utils.hfive.load_any(esum_path, f\"/exptSummary/E[0][{dmd - 1}]['footprints']\")\n",
+    "fp = spy.hf.load_any(esum_path, f\"/exptSummary/E[0][{dmd - 1}]['footprints']\")\n",
     "fpm = np.max(fp, axis=0)"
    ]
   },
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "meanim = spy.utils.hfive.load_any(esum_path, f\"/exptSummary/meanIM[{dmd - 1}][0]\")\n",
+    "meanim = spy.hf.load_any(esum_path, f\"/exptSummary/meanIM[{dmd - 1}][0]\")\n",
     "img = meanim[1, :, :].T\n",
     "fh = img.shape[0] / 40\n",
     "fw = img.shape[1] / 40\n",
