huge batch of updates

--- a/apps/source_selector/in_dev_plotly/source_viewer_and_selector.ipynb
+++ b/apps/source_selector/in_dev_plotly/source_viewer_and_selector.ipynb
@@ -35,7 +35,7 @@
     "exp = 'exp_2'\n",
     "loc = 'loc_J'\n",
     "acq = 'acq_1'\n",
-    "esum_path = wis.util.io.sub_esum_path(subject, exp, loc, acq)"
+    "esum_path = wis.util.info.sub_esum_path(subject, exp, loc, acq)"
    ]
   },
   {
