--- a/src/wisco_slap/pipes/notebooks/data_generation_manipulation.ipynb
+++ b/src/wisco_slap/pipes/notebooks/data_generation_manipulation.ipynb
@@ -58,18 +58,190 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b824aef",
+   "id": "d149b8ee",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab33f9fc",
+   "execution_count": 3,
+   "id": "6b824aef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on alkaid exp_1 loc_E--acq_2\n",
+      "Error saving ROI DFF traces for alkaid exp_1 loc_E acq_2: No such file or directory (os error 2): .../slap_mi/slap_mi/analysis_materials/alkaid/exp_1/activity_data/loc_E/acq_2/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on alkaid exp_1 loc_E--acq_1\n",
+      "Error saving ROI DFF traces for alkaid exp_1 loc_E acq_1: No such file or directory (os error 2): .../slap_mi/slap_mi/analysis_materials/alkaid/exp_1/activity_data/loc_E/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on alkaid exp_2 loc_J--acq_2\n",
+      "Error saving ROI DFF traces for alkaid exp_2 loc_J acq_2: No such file or directory (os error 2): .../slap_mi/slap_mi/analysis_materials/alkaid/exp_2/activity_data/loc_J/acq_2/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on alkaid exp_2 loc_J--acq_1\n",
+      "Error saving ROI DFF traces for alkaid exp_2 loc_J acq_1: No such file or directory (os error 2): .../slap_mi/slap_mi/analysis_materials/alkaid/exp_2/activity_data/loc_J/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on alkaid exp_3 loc_E--acq_1\n",
+      "Error saving ROI DFF traces for alkaid exp_3 loc_E acq_1: No such file or directory (os error 2): .../slap_mi/slap_mi/analysis_materials/alkaid/exp_3/activity_data/loc_E/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on alkaid exp_3 loc_J--acq_2\n",
+      "Detecting CaEvents for soma soma1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/driessen2@ad.wisc.edu/kdriessen/FINAL-slap2-dev/wisco-slap/src/wisco_slap/scope/somas.py:47: SparseEfficiencyWarning: spsolve requires A be CSC or CSR matrix format\n",
+      "  z = spsolve(W + C, w * y)\n",
+      "/Users/driessen2@ad.wisc.edu/kdriessen/FINAL-slap2-dev/wisco-slap/src/wisco_slap/scope/somas.py:246: PeakPropertyWarning: some peaks have a prominence of 0\n",
+      "  w_samples, _, _, _ = peak_widths(z_aligned_uni, refined_pk_uni, rel_height=0.5)\n",
+      "/Users/driessen2@ad.wisc.edu/kdriessen/FINAL-slap2-dev/wisco-slap/src/wisco_slap/scope/somas.py:246: PeakPropertyWarning: some peaks have a width of 0\n",
+      "  w_samples, _, _, _ = peak_widths(z_aligned_uni, refined_pk_uni, rel_height=0.5)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detecting CaEvents for soma soma2\n",
+      "Working on alkaid exp_3 loc_J--acq_1\n",
+      "Detecting CaEvents for soma soma2\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on avior exp_1 loc_I--acq_1\n",
+      "Detecting CaEvents for soma soma2\n",
+      "Detecting CaEvents for soma soma3\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on avior exp_1 loc_Z--acq_1\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on avior exp_2 loc_C--acq_1\n",
+      "Error saving ROI DFF traces for avior exp_2 loc_C acq_1: No such file or directory (os error 2): ...s/slap_mi/slap_mi/analysis_materials/avior/exp_2/activity_data/loc_C/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on avior exp_2 loc_C--acq_2\n",
+      "Detecting CaEvents for soma soma2\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on avior exp_2 loc_K--acq_2\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on avior exp_2 loc_K--acq_1\n",
+      "Error saving ROI DFF traces for avior exp_2 loc_K acq_1: No such file or directory (os error 2): ...s/slap_mi/slap_mi/analysis_materials/avior/exp_2/activity_data/loc_K/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on kaus exp_1 loc_E--acq_1\n",
+      "Detecting CaEvents for soma soma3\n",
+      "Detecting CaEvents for soma soma2\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on kaus exp_2 loc_F--acq_1\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Working on kaus exp_2 loc_D--acq_1\n",
+      "Detecting CaEvents for soma soma2\n",
+      "Detecting CaEvents for soma soma4\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Detecting CaEvents for soma soma3\n",
+      "Working on menka exp_1 loc_E--acq_1\n",
+      "Error saving ROI DFF traces for menka exp_1 loc_E acq_1: No such file or directory (os error 2): ...s/slap_mi/slap_mi/analysis_materials/menka/exp_1/activity_data/loc_E/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on menka exp_1 loc_E--acq_2\n",
+      "Detecting CaEvents for soma soma8\n",
+      "Detecting CaEvents for soma soma4\n",
+      "Detecting CaEvents for soma soma2\n",
+      "Detecting CaEvents for soma soma3\n",
+      "Detecting CaEvents for soma soma6\n",
+      "Detecting CaEvents for soma soma1\n",
+      "Detecting CaEvents for soma soma5\n",
+      "Detecting CaEvents for soma soma7\n",
+      "Working on menka exp_1 loc_R--acq_1\n",
+      "Error saving ROI DFF traces for menka exp_1 loc_R acq_1: No such file or directory (os error 2): ...s/slap_mi/slap_mi/analysis_materials/menka/exp_1/activity_data/loc_R/acq_1/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on menka exp_1 loc_R--acq_2\n",
+      "Error saving ROI DFF traces for menka exp_1 loc_R acq_2: No such file or directory (os error 2): ...s/slap_mi/slap_mi/analysis_materials/menka/exp_1/activity_data/loc_R/acq_2/roidf.parquet (set POLARS_VERBOSE=1 to see full path)\n",
+      "\n",
+      "This error occurred with the following context stack:\n",
+      "\t[1] 'parquet scan'\n",
+      "\t[2] 'filter'\n",
+      "\t[3] 'filter'\n",
+      "\t[4] 'sink'\n",
+      "\n",
+      "Working on sargas exp_3 loc_B--acq_1\n",
+      "Detecting CaEvents for soma soma1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LOOP OVER ALL ACQUISITIONS\n",
+    "si = wis.peri.sync.load_sync_info()\n",
+    "for subject in si.keys():\n",
+    "    for exp in si[subject].keys():\n",
+    "        acq_ids = wis.util.info.get_unique_acquisitions_per_experiment(subject, exp)\n",
+    "        for acq_id in acq_ids:\n",
+    "            try:\n",
+    "                print(f\"Working on {subject} {exp} {acq_id}\")\n",
+    "                loc, acq = acq_id.split(\"--\")\n",
+    "                wis.pipes.sleepscore.write_roi_dff_traces_for_scoring(\n",
+    "                    subject, exp, loc, acq, overwrite=False, roi_version='Fsvd'\n",
+    "                )\n",
+    "            except Exception as e:\n",
+    "                print(\n",
+    "                    f\"Error saving ROI DFF traces for {subject} {exp} {loc} {acq}: {e}\"\n",
+    "                )\n",
+    "                continue"
+   ]
   }
  ],
  "metadata": {
