--- a/FIGS/DETECTION/detect_avior.ipynb
+++ b/FIGS/DETECTION/detect_avior.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "esum_path = wis.util.io.sub_esum_path(subject, exp, loc, acq)"
+    "esum_path = wis.util.info.sub_esum_path(subject, exp, loc, acq)"
    ]
   },
   {
