--- a/FIGS/DETECTION/detect_events.ipynb
+++ b/FIGS/DETECTION/detect_events.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "esum_path = wis.util.info.sub_esum_path(subject, exp, loc, acq)"
+    "esum_path = wis.util.info.get_esum_mirror_path(subject, exp, loc, acq)"
    ]
   },
   {
